<resources>
    <string name="app_name">PokemonFirebase</string>
    <string name="default_web_client_id">209769961454-1ikvvmv1t4e1lb9peblii5h9u8qkl6fk.apps.googleusercontent.com</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="complete_fields">Completa los campos</string>
    <string name="register">¿No tienes cuenta? Regístrate aquí</string>
    <string name="register_button">Registrar</string>
    <string name="back_to_login">Volver al login</string>
    <string name="login_google">Continúa con Google</string>
    <string name="register_google">Registro con Google</string>
    <string name="successful_login">Inicio de sesión exitoso</string>
    <string name="error_login">Error en el inicio de sesión</string>
    <string name="successful_login_google">Inicio de sesión con Google exitoso</string>
    <string name="error_login_google">Error en el inicio de sesión con Google</string>
    <string name="error_authentication_google">Error en la autenticación con Google</string>
    <string name="successful_register">Registro exitoso</string>
    <string name="error_register">Error en el registro</string>
    <string name="successful_register_google">Registro exitoso con Google</string>
    <string name="error_register_google">Error en el registro con Google</string>
    <string name="captured_pokemons">Pokemon capturados</string>
    <string name="pokedex">Pokédex</string>
    <string name="settings">Ajustes</string>
    <string name="delete_captured_pokemons">Eliminar Pokémon Capturados</string>
    <string name="pokemon_deleted">Pokemon eliminado</string>
    <string name="deletion_enabled">Eliminación activada</string>
    <string name="deletion_disabled">Eliminación desactivada</string>
    <string name="change_languaje">Cambiar idioma</string>
    <string name="current_languaje">Idioma cambiado a Español</string>
    <string name="pokemon_capture">Pokemon capturado!</string>
    <string name="pokemon_already_captured">Este pokemon ya está capturado</string>
    <string name="logout">Cerrar sesión</string>
    <string name="about">Sobre...</string>
    <string name="about_title">Acerca de la aplicación</string>
    <string name="about_message">Aplicación PokemonFirebase.\n
    Versión 1.0\n
    Desarrollada por Pedro Javier Morales Leyva</string>
    <string name="back">Atrás</string>
    <string name="index">Índice</string>
    <string name="details">Detalles</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="load_details">Cargando detalles...</string>
    <string name="type_normal">Normal</string>
    <string name="type_poison">Veneno</string>
    <string name="type_psychic">Psíquico</string>
    <string name="type_food">Comida</string>
    <string name="type_grass">Planta</string>
    <string name="type_ground">Tierra</string>
    <string name="type_ice">Hielo</string>
    <string name="type_slug">Babosa</string>
    <string name="type_fire">Fuego</string>
    <string name="type_rock">Roca</string>
    <string name="type_dragon">Dragón</string>
    <string name="type_plastic">Plástico</string>
    <string name="type_water">Agua</string>
    <string name="type_bug">Bicho</string>
    <string name="type_dark">Siniestro</string>
    <string name="type_wind">Viento</string>
    <string name="type_fighting">Lucha</string>
    <string name="type_ghost">Fantasma</string>
    <string name="type_steel">Acero</string>
    <string name="type_crystal">Cristal</string>
    <string name="type_flying">Volador</string>
    <string name="type_electric">Eléctrico</string>
    <string name="type_fairy">Hada</string>
    <string name="type_light">Luz</string>
    <string name="type_unknown">Desconocido</string>

</resources>