<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:padding="16dp"
    android:background="@drawable/setting_background">

    <!-- Título -->

    <!-- Botón para cambiar idioma -->

    <TextView
        android:id="@+id/tvSettings"
        style="@style/TabsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/languageLayout"
        style="@style/LinearLayoutSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettings">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/change_languaje_ic" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/changeLanguaje"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/pokemon_solid"
            android:text="@string/change_languaje"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deletePokemonLayout"
        style="@style/LinearLayoutSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/delete_pokemon" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/deleteCapturedPokemon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_captured_pokemons"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="@font/pokemon_solid"
            android:textColor="@color/grey"/>

        <Switch
            android:id="@+id/switchDeletePokemon"
            style="@style/SwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aboutLayout"
        style="@style/LinearLayoutSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deletePokemonLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/about_ic" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="@font/pokemon_solid"
            android:textColor="@color/blue"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logoutLayout"
        style="@style/LinearLayoutSetting"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/logoff_ic" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/logoff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:fontFamily="@font/pokemon_solid"
            android:textColor="@color/log_off"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_right" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
